[project]
name = "koinobori"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
    "alembic==1.18.4",
    "fastapi-slim==0.129.1",
    "mangum==0.21.0",
    "orjson==3.11.7",
    "pydynamodb[sqlalchemy]==0.8.1",
    # removed in python 3.12, but pydynamodb needs it.
    "setuptools==82.0.0",
    "structlog==25.5.0",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "docker==7.1.0",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "rich==14.3.3",
    "ruff-lsp==0.0.62",
    "ruff==0.15.2",
    "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"
pythonVersion = "3.14"
useLibraryCodeForTypes = true
ignore = [
  '**/.venv/**',
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
 "D", # disable docstring checks
 "COM812", # conflicts with ruff format
 "ISC001", # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # allow assert in tests
]
