[project]
name = "koinobori"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = "==3.14.5"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.136.3",
    "mangum==0.21.0",
    "orjson==3.11.9",
    "pydynamodb[sqlalchemy]==0.8.2",
    # removed in python 3.12, but pydynamodb needs it.
    "setuptools==82.0.1",
    "structlog==25.5.0",
    "yarl==1.24.2",
]

[dependency-groups]
dev = [
    "python-on-whales==0.81.0",
    "pyright==1.1.410",
    "pytest==9.0.3",
    "rich==15.0.0",
    "ruff==0.15.16",
    "uvicorn[standard]==0.49.0",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"
pythonVersion = "3.14"
useLibraryCodeForTypes = true
ignore = [
  '**/.venv/**',
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
 "D", # disable docstring checks
 "COM812", # conflicts with ruff format
 "ISC001", # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # allow assert in tests
]
